--- a/src/style/Intro.css
+++ b/src/style/Intro.css
@@ -4,43 +4,58 @@
   min-height: 60vh;
   top: 5vh;
   z-index: 6;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .star-wars-intro {
   display: flex;
   justify-content: center;
   position: relative;
-  height: 600px;
+  height: 500px;
   color: black;
-  font-family: 'Pathway Gothic One', sans-serif;
+  /* font-family: 'Pathway Gothic One', sans-serif; */
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 400%;
-  font-weight: 600;
+  font-weight:500;
   letter-spacing: 3px;
   line-height: 100%;
-  perspective: 200px;
-  text-align: justify;
-  margin-top: 100px;
+  perspective: 20px;
+  /* text-align: justify; */
+  /* margin-top: 1px; */
 }
 
 .crawl  {
-  position: relative;
+  /* position: relative; */
   font-size: 25px;
   padding-left:5%;
-  padding-right:5%;
+  padding-right:5%; 
 }
 
 .crawl  > .title {
   font-size: 90%;
   text-align: center;
+  font-weight: bold;
 }
 
 .crawl > .title h1 {
   text-transform: uppercase;
 }
 
+.crawl >  p {
+  font-size: 20px;
+}
+
 .p-center {
   text-align: center;
+}
+
+.click-to-the-game-btn{
+  margin-left: 45%;
+  text-align: center;
+}
+
+.click-to-the-game-btn :hover{
+  background-color: darkgray;
 }
 
 .buttons {
@@ -50,8 +65,10 @@
 }
 
 #divider{
-  width: 20px;
+  height: 20px;
 }
+
+
 /* 
 @keyframes crawl  {
   0% {
