--- a/src/style/App.css
+++ b/src/style/App.css
@@ -73,7 +73,7 @@ html {
   vertical-align: 0.125em;
 }
 
-.new-game,
+/* .new-game, */
 .announcer {
   z-index: 10;
   color: black;
@@ -100,16 +100,65 @@ html {
   box-shadow: inset 0 0 80px #000000, inset 0 0 10px 20px #000000;
 } */
 
-.new-game-btn,
+/* .new-game-btn, */
+
 .start-game-btn {
-  justify-self: center;
-  position: absolute !important;
-  bottom: 5vh;
+  /* justify-self: center; */
+  /* position: absolute !important; */
+  margin-left: 50%;
+  bottom: 2%;
   left: 50vw;
   transform: translate(-50%, 0%);
   font-size: 2rem;
   width: 500px;
+  height: 10%;}
+ 
+
+.buttons{
+  justify-self: center;
+  position: absolute !important;
+  bottom: 50vh;
+  left: 50vw;
+  transform: translate(-50%, 0%);
+  /* font-size: 2rem; */
+  width: 500px;
+  height: 70px;
+  display: inline-block;
+  /* transition: all 0.5s; */
+ 
 }
+
+.free-player-game-btn{
+  background-color:white;
+  border: none;
+  color:black;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  /* opacity: 1;
+  transition: 0.3s; */
+}
+
+.normal-game-btn{
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  /* transition: 0.3s; */
+}
+
+
+.normal-game-btn:hover {
+  background-color: lightgray;
+}
+.free-player-game-btn:hover {
+  background-color: lightgray;
+}
+
 
 .start-free-player-game-btn {
   justify-self: center;
