--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,4 +1,3 @@
-
 header {
   color: rgb(255, 255, 255);
   position: relative;
@@ -12,7 +11,7 @@ header {
 }
 
 .title-main {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 3rem;
   text-shadow: 0px 0px 5px greenyellow;
 }
@@ -36,26 +35,17 @@ html {
   background-color: rgb(139, 136, 130);
 }
 
-/* .gh-btn:hover {
-  -moz-animation: button-twink 1s linear infinite;
-  -ms-animation: button-twink 1s linear infinite;
-  -o-animation: button-twink 1s linear infinite;
-  -webkit-animation: button-twink 1s linear infinite;
-  animation: button-twink 1s linear infinite;
-} */
-
 .svg-inline--fa {
   vertical-align: 0.125em;
 }
 
-/* .new-game, */
 .announcer {
   z-index: 10;
   color: black;
-  position: absolute; 
-   top: 50vh;
+  position: absolute;
+  top: 50vh;
   left: 50vw;
-  transform: translate(-50%, -50%); 
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
@@ -64,50 +54,34 @@ html {
 }
 
 .start-game-btn {
-  /* justify-self: center; */
-  /* position: absolute !important; */
   margin-left: 50%;
   bottom: 2%;
   left: 50vw;
   transform: translate(-50%, 0%);
   font-size: 2rem;
   width: 500px;
-  height: 10%;}
+  height: 10%;
+}
 
-  .new-game-btn {
-    margin-top: 30%;
-    margin-left: 45%;
-    font-size: 2rem;  
-  }
- 
+.new-game-btn {
+  margin-top: 35%;
+  margin-left: 47%;
+  font-size: 25px;
+  padding: 15px 20px;
+}
 
-.buttons{
+.buttons {
   justify-self: center;
   position: absolute !important;
   bottom: 50vh;
   left: 50vw;
   transform: translate(-50%, 0%);
-  /* font-size: 2rem; */
   width: 500px;
   height: 70px;
   display: inline-block;
-  /* transition: all 0.5s; */
- 
 }
 
-.free-player-game-btn{
-  background-color:white;
-  border: none;
-  color:black;
-  padding: 16px 32px;
-  text-align: center;
-  font-size: 16px;
-  margin: 4px 2px;
-  /* opacity: 1;
-  transition: 0.3s; */
-}
-
-.normal-game-btn{
+.free-player-game-btn {
   background-color: white;
   border: none;
   color: black;
@@ -115,9 +89,17 @@ html {
   text-align: center;
   font-size: 16px;
   margin: 4px 2px;
-  /* transition: 0.3s; */
 }
 
+.normal-game-btn {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+}
 
 .normal-game-btn:hover {
   background-color: lightgray;
@@ -126,10 +108,8 @@ html {
   background-color: lightgray;
 }
 
-
 .start-free-player-game-btn {
   justify-self: center;
-  /* position: absolute !important; */
   bottom: 5vh;
   left: 50vw;
   transform: translate(-50%, 0%);
@@ -138,12 +118,10 @@ html {
 }
 
 .star-btn {
-  /*background-color: black;*/
   border: 2px double white;
   border-radius: 5px;
   color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  /* transition: all 0.5s; */
+  font-family: Georgia, "Times New Roman", Times, serif;
   padding: 10px;
 }
 
@@ -151,17 +129,16 @@ html {
   box-shadow: 0px 0px 30px rgb(207, 126, 5);
 }
 
-
 .announcer {
   background-color: rgb(13, 148, 13);
   top: 45vh;
   border-radius: 50px;
   width: 600px;
+  
 }
 
 .announcer.ai-player {
   background-color: rgba(110, 24, 2, 0.8);
-
 }
 
 .announcer h1 {
@@ -170,53 +147,7 @@ html {
 
 .announcer.ai-player h1 {
   padding: 20px;
-} */
-/* 
-.img-wrapper {
-  width: 460px;
-  height: 250px;
-  overflow: hidden;
-  justify-self: center;
-  margin: auto;
-  margin-bottom: 55px;
-} */
-
-
-/* @keyframes button-twink {
-  from {
-    box-shadow: 0px 0px 15px greenyellow;
-  }
-  to {
-    box-shadow: 0px 0px 15px greenyellow;
-  }
-  to {
-    box-shadow: 0px 0px 30px greenyellow;
-  }
 }
-@-webkit-keyframes button-twink {
-  from {
-    box-shadow: 0px 0px 10px greenyellow;
-  }
-  to {
-    box-shadow: 0px 0px 15px greenyellow;
-  }
-}
-@-moz-keyframes button-twink {
-  from {
-    box-shadow: 0px 0px 10px greenyellow;
-  }
-  to {
-    box-shadow: 0px 0px 15px greenyellow;
-  }
-}
-@-ms-keyframes button-twink {
-  from {
-    box-shadow: 0px 0px 10px greenyellow;
-  }
-  to {
-    box-shadow: 0px 0px 15px greenyellow;
-  }
-} */
 
 .trans-enter {
   opacity: 0;
@@ -234,7 +165,6 @@ html {
 }
 
 @media (max-width: 768px) {
-
   .header-row {
     padding: 0px;
   }
@@ -252,13 +182,14 @@ html {
   .title-main {
     font-size: 1.8rem;
   }
-  
+
   .star-wars-intro {
-    font-size: 2.0rem;
+    font-size: 2rem;
   }
-  
-  .new-game-btn, .start-game-btn {
-    font-size: 1.0rem;
+
+  .new-game-btn,
+  .start-game-btn {
+    font-size: 1rem;
     width: initial;
   }
 
@@ -269,7 +200,7 @@ html {
   }
 
   .new-game-wrapper {
-    transform: scale(.8);
+    transform: scale(0.8);
   }
 
   .side-title {
@@ -282,25 +213,24 @@ html {
   }
 
   .dark.game-board {
-    margin-top:  -140px !important;
+    margin-top: -140px !important;
   }
 
   .ship-menage-wrapper {
     transform: scale(0.9) translate(-20%, 0);
-
   }
 
   .start-game-btn {
     position: fixed !important;
-    bottom: 2vh
+    bottom: 2vh;
   }
 
-  .game .star-btn:nth-child(n+2) {
+  .game .star-btn:nth-child(n + 2) {
     display: none;
   }
 
   .announcer {
-    transform: scale(.5) translate(-100%, -50%);
+    transform: scale(0.5) translate(-100%, -50%);
     overflow: hidden;
     width: 170%;
     top: 30vh;
