--- a/src/style/Intro.css
+++ b/src/style/Intro.css
@@ -2,9 +2,6 @@
   background-color: rgb(124, 158, 250);
   position: relative;
   width: 100%;
-  /* min-height: 60vh; */
-  /* top: 5vh; */
-  /* z-index: 6; */
   overflow: hidden;
 }
 
@@ -12,19 +9,15 @@
   display: flex;
   justify-content: center;
   position: relative;
-  /* height: 600px; */
   color: black;
   font-family:Georgia, 'Times New Roman', Times, serif;
   font-size: 180%;
   font-weight: 300;
   line-height: 100%;
   perspective: 20px;
-  /* text-align: justify; */
-  /* margin-top: 1px; */
 }
 
 .crawl  {
-  /* position: relative; */
   font-size: 25px;
   padding-left:5%;
   padding-right:5%; 
@@ -45,19 +38,19 @@
 }
 
 .click-start-game-btn {
-  text-align: center;
+  border: 2px double white;
+  border-radius: 5px;
   color: black;
-  background-color: rgb(247, 199, 140);
-  margin-left: 43%;
-  width: 300px;;
-  border: 2px solid;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 25px;
+  padding: 15px 20px;
+  margin-left: 43%;
+  width: 300px;
+  margin-bottom: 50%;
 }
 
 .click-start-game-btn:hover{
-  background-color: rgb(223, 117, 117);
-  color:white;
-  border: 0;
+  box-shadow: 0px 0px 30px rgb(207, 126, 5);
 }
 
 
@@ -66,32 +59,27 @@
   align-items: center;
   justify-content: space-around;
   height: 100vh;
-  background: rgb(124, 158, 250);
 }
 
 .btn {
   width: 300px;;
-  border: 2px solid;
-  background-color: transparent;
+  border: 2px double white;
+  border-radius: 5px;
   font-size: 25px;
   padding: 15px 20px;
 }
 
 .one {
-  background-color:rgb(247, 199, 140);
-  color: black
+  background-color:white;
+  color: black;
 }
 
 .btn:hover {
-  color: white;
-  border: 0;
+  box-shadow: 0px 0px 30px rgb(207, 126, 5);
 }
 
 .one:hover {
-  background-color:rgb(223, 117, 117);
-  -webkit-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
-  -moz-box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
-  box-shadow: 10px 10px 99px 6px rgba(76,201,240,1);
+  box-shadow: 0px 0px 30px rgb(207, 126, 5);
 }
 
 #divider{
@@ -99,18 +87,3 @@
 }
 
 
-/* 
-@keyframes crawl  {
-  0% {
-    top: 1000px;
-    transform: rotateX(20deg)  translateZ(0);
-  }
-  100% { 
-    top: -6000px;
-    transform: rotateX(25deg) translateZ(-2500px);
-  }
-} */
-
-/* .trans {
-  background-color: rgb(124, 158, 250);
-} */
