opacity ship img

--- a/src/style/Game.css
+++ b/src/style/Game.css
@@ -137,7 +137,7 @@
   -webkit-user-drag: none !important;
   -webkit-user-select: none !important;
   -ms-user-select: none !important;
-  /* opacity: 0; */
+  opacity: 0;
 }
 
 .light .cell .hit-png {
