--- a/src/style/Game.css
+++ b/src/style/Game.css
@@ -20,7 +20,6 @@
   justify-content: space-evenly;
 }
 
-
 .grid-wrapper {
   margin: 10px;
   padding: 10px;
@@ -143,7 +142,7 @@
 .light .cell .hit-png {
   filter: hue-rotate(110deg);
   z-index: 15; 
-} */
+} 
 
 .cell.hit .ship-img-grid {
   transform: translate(37%) scale(1);
